fix: modal size on mobile

--- a/frontend/src/components/ModalContainer/styles.scss
+++ b/frontend/src/components/ModalContainer/styles.scss
@@ -5,6 +5,7 @@
   align-items: center;
   background: var(--background);
   width: 550px;
+  max-width: 90%;
   padding: 20px;
   border-radius: 5px;
 }
