--- a/frontend/src/pages/ListContent/components/addNewSection/styles.scss
+++ b/frontend/src/pages/ListContent/components/addNewSection/styles.scss
@@ -30,5 +30,15 @@
         }
       }
     }
+
+    @media(max-width:330px){
+      flex-direction: column-reverse;
+
+      button{
+        width: 100%;
+        margin-bottom: 10px;
+        align-self: center;
+      }
+    }
   }
 }
